# home-assistant-cloudshell-client

./: .gitignore  README.md  hacsc_sensor.h  hacsc_ui.c  hacsc_ui.h  hostinfo.c  main.c  meson.build  run.sh
